--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "node-mailjet": "^6.0.8",
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
