--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MJ_APIKEY_PUBLIC=71db1050f6647fc620adae80dec5b890
 MJ_APIKEY_PRIVATE=52e6655785bf9cf3ab1ca295b796abb3
+DB_HOST=crossover.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=AlgQbfiiilwDRYUnQidfLAWXLJCYnlni
+DB_PORT=14829
+DB_NAME=railway
